--- a/package.json
+++ b/package.json
@@ -1,28 +1,26 @@
 {
   "name": "mds-api-tp",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx tsc && node dist/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Kévin Voisine",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "description": "TP API REST pour apprendre les concepts de base d'une API REST",
+  "description": "",
   "dependencies": {
-    "@sequelize/mysql": "^7.0.0-alpha.43",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mysql2": "^3.12.0",
     "sequelize": "^6.37.5"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "typescript": "^5.7.2",
-    "@stylistic/eslint-plugin": "^2.12.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-promise": "^7.2.1",
-    "prettier": "^3.4.2"
+    "chai": "^5.1.2",
+    "eslint": "^9.17.0",
+    "mocha": "^11.0.1",
+    "supertest": "^7.0.0"
   }
 }
