--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
-# Database
-DB_NAME=tp-api-rest
-DB_USER=root
-DB_PASSWORD=
-DB_HOST=localhost
-DB_PORT=3306
+NODE_ENV=development
 
-# Web Server
+DB_NAME="tp-api-rest"
+DB_USER="root"
+DB_PASSWORD=""
+DB_HOST="localhost"
+DB_PORT=3306
+DB_DIALECT=mysql
+
 PORT=3000
