--- a/package.json
+++ b/package.json
@@ -3,24 +3,25 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "body-parser": "^1.20.3",
-    "cors": "^2.8.5",
+    "chai": "^5.1.2",
     "dotenv": "^16.4.7",
+    "eslint": "^9.17.0",
     "express": "^4.21.2",
+    "mocha": "^11.0.1",
     "mysql2": "^3.12.0",
-    "sequelize": "^6.37.5"
+    "sequelize": "^6.37.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "chai": "^5.1.2",
-    "eslint": "^9.17.0",
-    "mocha": "^11.0.1",
-    "supertest": "^7.0.0"
+    "sequelize-cli": "^6.6.2"
   }
 }
