--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "migrate": "sequelize-cli --config config/config.json db:migrate",
+    "undo-migrate": "sequelize-cli --config config/config.json db:migrate:undo"
   },
   "keywords": [],
   "author": "",
