--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
-NODE_ENV=development
+NODE_ENV=production
 
-DB_NAME="tp-api-rest"
-DB_USER="root"
-DB_PASSWORD=""
+DB_NAME="api-rest"
+DB_USERNAME="root"
+DB_PASSWORD="rootpassword"
 DB_HOST="localhost"
 DB_PORT=3306
-DB_DIALECT=mysql
+DB_DIALECT=mariadb
 
 PORT=3000
