--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "migrate": "sequelize-cli --config config/config.json db:migrate",
-    "undo-migrate": "sequelize-cli --config config/config.json db:migrate:undo"
+    "migrate": "npx sequelize-cli db:migrate",
+    "undo-migrate": "sequelize-cli db:migrate:undo"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sequelize/mariadb": "^7.0.0-alpha.43",
     "chai": "^5.1.2",
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
