--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,86 +1,63 @@
 services:
-  nginx:
-    image: nginx:alpine
-    container_name: nginx
+  caddy:
+    image: caddy:latest
+    container_name: caddy
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf
-      - ./ssl:/etc/nginx/ssl
-    depends_on:
-      - ssl-cert-generator  # Nginx doit attendre que ssl-cert-generator finisse
+      - ./Caddyfile:/etc/caddy/Caddyfile
+    environment:
+      - APP_HOST=${APP_HOST}
+      - PORT=${PORT}
     networks:
       - app-network
-    deploy:
-      restart_policy:
-        condition: on-failure
-        max_attempts: 3
-
-  ssl-cert-generator:
-    image: alpine
-    container_name: ssl-cert-generator
-    volumes:
-      - ./ssl:/ssl
-    command: >
-      sh -c '
-        apk add --no-cache openssl &&
-        if [ ! -f /ssl/nginx.key ]; then
-          openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /ssl/nginx.key -out /ssl/nginx.crt -subj "/C=FR/ST=IDF/L=Paris/O=Development/CN=localhost" &&
-          chmod 644 /ssl/nginx.crt &&
-          chmod 600 /ssl/nginx.key;
-        else
-          echo "SSL key already exists, skipping generation.";
-        fi
-      '
+    restart: unless-stopped
 
   api:
     build: .
     container_name: api
     expose:
-      - "3000"
+      - "${PORT}"
     environment:
       - DB_HOST=mariadb
       - DB_PORT=3306
-      - DB_USER=root
-      - DB_PASSWORD=rootpassword
-      - DB_NAME=api-rest
+      - DB_USER=${DB_USERNAME}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+      - PORT=${PORT}
     volumes:
       - .:/app
       - /app/node_modules
     working_dir: /app
-    depends_on:
-      - mariadb
-    networks:
-      - bdd-network
-      - app-network
     deploy:
       restart_policy:
         condition: on-failure
-        max_attempts: 4
-        delay: 10s
+        max_attempts: 10
+    depends_on:
+      - mariadb
+    networks:
+      - app-network
     command: >
       sh -c "
         npx sequelize-cli db:migrate && npm start
       "
 
   mariadb:
-    image: mariadb:10.5
+    image: mariadb:latest
     container_name: mariadb
     environment:
-      - MYSQL_ROOT_PASSWORD=rootpassword
-      - MYSQL_DATABASE=api-rest
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+      - MYSQL_DATABASE=${DB_NAME}
     ports:
-      - "3306"
+      - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
     networks:
-      - bdd-network
+      - app-network
+
+networks:
+  app-network:
 
 volumes:
   db_data:
-  ssl_data:  # Volume pour partager les certificats entre les conteneurs
-
-networks:
-  bdd-network:
-  app-network:
