--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "migrate": "npx sequelize-cli db:migrate",
+    "dev": "nodemon app.js",
     "undo-migrate": "sequelize-cli db:migrate:undo"
   },
   "keywords": [],
@@ -14,10 +15,12 @@
   "description": "",
   "dependencies": {
     "@sequelize/mariadb": "^7.0.0-alpha.43",
+    "bcryptjs": "^2.4.3",
     "chai": "^5.1.2",
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mocha": "^11.0.1",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5",
