--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.7",
     "eslint": "^9.17.0",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mocha": "^11.0.1",
     "mysql2": "^3.12.0",
