--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "mocha": "^11.0.1",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.5",
+    "socket.io": "^4.8.1",
+    "supertest": "^7.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
