--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mds-api-tp",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "lint": "eslint .",
     "fix": "eslint --fix .",
