--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nodemon": "^3.1.1",
     "sequelize-cli": "^6.6.2",
     "@stylistic/eslint-plugin": "^2.12.0",
+    "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
